# logline-tv

./: .dockerignore  .env.example  .gitignore  ACQUISITION.md  Dockerfile  GUIA_DO_USUARIO.md  README.md  REALITY_CHECK.md  RUNBOOK.md  SECURITY_NOTES.md  USER_GUIDE.md  alembic.ini  docker-compose.yml  pyproject.toml
.agents/skills/testing-voulezvous/: SKILL.md
.github/workflows/: ci.yml  postgres-smoke.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_acquisition_subsystem.py  003_bridge_traceability.py  004_runtime_controls_and_constraints.py  005_asset_performance.py  006_domain_policy_extraction.py  007_director.py
docs/: ADMIN_GUIDE.md  LLM_GUIDE.md
scripts/: burnin_probe.sh  check_postgres_migrations.sh  generate_plan.sh  run_burnin_24h.sh  wait_for_ready_buffer.sh
src/voulezvous/: config.py  database.py  logging_config.py
src/voulezvous/acquisition/: __init__.py  enums.py  models.py  schemas.py  seed.py
src/voulezvous/api/: app.py  schemas.py
src/voulezvous/cli/: main.py
src/voulezvous/mcp/: server.py
src/voulezvous/models/: base.py  enums.py  tables.py
src/voulezvous/services/: bootstrap.py  cleanup.py  director.py  director_state.py  director_tools.py  ffmpeg.py  planner.py  prep_worker.py  r2_upload.py  reporter.py  seed.py  stream_control.py  streamer.py
tests/: conftest.py  test_acquisition.py  test_assets.py  test_bridge.py  test_cleanup.py  test_director.py  test_hls_serving.py  test_operation_safety.py  test_p0_regressions.py  test_planner.py  test_prep.py  test_readiness_gate.py  test_redaction.py  test_reporter.py
(+36 files in other folders)
