[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voulezvous"
version = "0.1.0"
description = "Voulezvous.tv streaming engine – curated, planned, non-realtime broadcasting backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "psycopg2-binary>=2.9,<3",
    "alembic>=1.14,<2",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "httpx>=0.27,<1",
    "structlog>=24.0,<26",
    "click>=8.0,<9",
    "python-multipart>=0.0.9",
    "jinja2>=3.1,<4",
    "boto3>=1.35,<2",
    "playwright>=1.40,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-httpx>=0.30,<1",
    "ruff>=0.4,<1",
    "aiosqlite>=0.20,<1",
]

[project.scripts]
app = "voulezvous.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
